--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 
             <!-- Sender section with image -->
             <div class="sender-section">
-                <img src="profile.jpeg" alt="Denis" class="profile-image">
-                <p class="sender-text">From me, Denis — wishing you a gentle and hopeful year ahead.</p>
+                <img src="brian.jpeg" alt="Denis" class="profile-image">
+                <p class="sender-text">From me, Brian — wishing you a gentle and hopeful year ahead.</p>
             </div>
         </div>
     </section>
